07-Mai-2004 by Matthias Braun
-started work on new serverbrowsing window
-nearly eleminated deprecated UtilInterface class
-dropped incomplete editor. (There's flexlay now)

04-Mai-2004 by Matthias Braun
-fixed some gcc 3.4 issues and warnings
-fixed some errors where nonpacked classes where used inside packed
 datastructures
-fixed some bugs in IOFileStream classes (no sync when destructing)
-added new INIFile parser to replace the xml code/congigfiles
-cleaned up pathfinding code a bit in preparation for further experiments

18-Mar-2004 by Matthias Braun
-integrated masterserver support into the dedicated server

11-Mar-2004 by Matthias Braun
-started work on a serverconsole

8-Mar-2004 by Matthias Braun
-fixed a bug in colortable saving which I introduced with my last commit
-added timestamp to serverconsole and cleaned related code a bit

4-Mar-2004 by Matthias Braun
-applied a bunch of endianess patches from Hollis Blanchard
-added doxygen comments to Endian.hpp and did a few other fixes/style
 improvements
-tried to fix problems on alpha64 build and made ReadFile::read and
 FileWrite::write return exceptions
    
1-Mar-2004 by Matthias Braun
-applied some fixes to Jamfiles (thanks Hollis Blanchard)

21-Feb-2004 by Matthias Braun
-added a mapcycle variable to the server config.
-fixed a bug in map loading while mapcycling on the client
-changed some keybinding (m for minimapview, disabled some obsolete views)

01-Feb-2004 by Matthias Braun
-added a jam rule to create doxygen documentation
-implemented scrolling in netpanzeredit mapview

19-Jan-2004 by Wolfgang Koller
-Fixed WinnerMesgView and RankView so that they now display the correct colors

18-Jan-2004 by Wolfgang Koller
-Changed the ServerBrowser so that it now really supports the query-timeout
-It's now possible to scroll with the arrow key of your keyboard
-WinnerMesgView now also uses the colors

17-Jan-2004 by Wolfgang Koller
-Each player now has a color (defined in PlayerState)